--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_tts: ^3.0.0
   pie_chart: ^5.3.2
   provider: ^6.0.2
-  connectivity_plus: ^2.3.0 # network connectivity checking
+  connectivity_plus: ^5.0.2
   http: ^1.0.0
   google_fonts: ^6.1.0
   flutter_spinkit: ^5.1.0
